# TPSC

./: .buildinfo  GF.py  Mesh.py  README  README.md  TPSC.py  TPSC_main.py  about.html  examples.html  genindex.html  getting_started.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  theory_guide.html  user_guide.html
.doctrees/: about.doctree  environment.pickle  examples.doctree  getting_started.doctree  index.doctree  theory_guide.doctree  user_guide.doctree
.github/workflows/: builddoc.yml
TPSC/: CLI_scripts.py  Dispersions.py  GF.py  TPSC.py  __init__.py
_sources/: about.rst.txt  getting_started.rst.txt  index.rst.txt  theory_guide.rst.txt
docs/source/: About_TPSC.rst  conf.py  examples.rst  index.rst  user_guide.rst
examples/: TPSC_plotting_selfen.py  para.json  simple_calculation.py
tests/: ref_f5dc1ce.json  test_vs_reference.py
